--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             <table id="purchase-table">
                 <thead>
                     <tr>
-                        <th>序号</th> <th><input type="checkbox" id="select-all"></th>
+                        <th>序号</th> 
+                        <th><input type="checkbox" id="select-all"></th>
                         <th>订单时间</th>
                         <th>名称/描述</th>
                         <th>价格 (¥)</th>
